<resources>
    <string name="app_name">TimesInternetAssignment</string>
    <string name="loading">Loading…</string>
    <string name="home_act">Home</string>
    <string name="no_data_found">No data found.</string>
    <string name="artist_name">Artist Name</string>
    <string name="genre_yr_name">Genre/Year</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="album_name">Album Name</string>
    <string name="album">Album</string>
    <string name="genre">Genre</string>
    <string name="release_date">Release date</string>
    <string name="track_num">Track Num.</string>
    <string name="country">Country</string>
    <string name="price">Price</string>
    <string name="n_a">N.A</string>
    <string name="description">Description:</string>
    <string name="categories">Categories</string>
    <string name="mrp_and_discount">MRP and Discount(if Any)</string>
    <string name="like">Like</string>
</resources>
