<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:id="@+id/rl_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true">


                <ImageView
                    android:id="@+id/imgCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/no_product_image" />


                <ImageView
                    android:id="@+id/imgBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="start"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:gravity="center_vertical"
                    android:padding="@dimen/dp_15"
                    app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="@dimen/dp_40"
                    android:layout_height="@dimen/dp_40"

                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/dp_25"
                    android:padding="@dimen/dp_5"
                    android:visibility="gone" />


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true">


                    <TextView

                        android:id="@+id/tv_timeDate"
                        style="@style/editTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_gravity="end"
                        android:background="@color/full_transparent"
                        android:ellipsize="marquee"
                        android:gravity="end"
                        android:hint="@string/app_name"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:padding="@dimen/dp_4"
                        android:singleLine="true"
                        android:text="@string/_00_00_00"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="@dimen/sp_16"
                        android:shadowColor="#424242"
                        android:shadowRadius="2"
                        app:font="@{`regular`}" />

                </RelativeLayout>


            </RelativeLayout>


            <RelativeLayout
                android:id="@+id/rl_mid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rl_top"

                android:padding="@dimen/dp_2"


                >

                <TextView
                    android:id="@+id/tv_Name"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="marquee"
                    android:gravity="center"
                    android:hint="@string/app_name"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingTop="@dimen/dp_5"
                    android:paddingEnd="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_5"
                    android:singleLine="true"
                    android:text="@string/n_a"
                    android:textColor="@color/colorPrimaryDark"
                    android:textColorHint="@color/colorPrimaryDark"
                    android:textSize="@dimen/sp_20"
                    app:font="@{`semibold`}" />


                <TextView
                    android:id="@+id/tv_shortDesc"
                    style="@style/editTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_Name"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:hint="@string/app_name"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:paddingStart="@dimen/dp_5"
                    android:paddingTop="@dimen/dp_1"
                    android:paddingEnd="@dimen/dp_5"
                    android:paddingBottom="@dimen/dp_1"
                    android:maxLines="4"
                    android:text="@string/n_a"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey_stroke"
                    android:textSize="@dimen/sp_18"
                    app:font="@{`semibold`}" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:layout_below="@+id/tv_shortDesc"
                    android:layout_margin="@dimen/dp_10"
                    android:background="@color/black" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_shortDesc"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dp_20">


                    <LinearLayout
                        android:id="@+id/ll_desc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView

                            android:id="@+id/tv_t1"
                            style="@style/editTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/full_transparent"
                            android:ellipsize="marquee"
                            android:gravity="center_vertical"
                            android:hint="@string/app_name"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/dp_4"
                            android:singleLine="true"
                            android:text="@string/description"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black_text"
                            android:textSize="@dimen/sp_16"
                            app:font="@{`regular`}" />

                        <TextView

                            android:id="@+id/tv_DescFull"
                            style="@style/editTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/full_transparent"
                            android:gravity="center_vertical"
                            android:hint="@string/app_name"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/dp_4"
                            android:text="@string/n_a"
                            android:textColor="@color/grey_stroke"
                            android:textColorHint="@color/black_text"
                            android:textSize="@dimen/sp_16"
                            app:font="@{`regular`}" />

                    </LinearLayout>


                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical">

                        <TextView

                            android:id="@+id/tv_t2"
                            style="@style/editTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/full_transparent"
                            android:ellipsize="marquee"
                            android:gravity="center_vertical"
                            android:hint="@string/app_name"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/dp_4"
                            android:singleLine="true"
                            android:text="@string/categories"
                            android:textColor="@color/black"
                            android:textColorHint="@color/black_text"
                            android:textSize="@dimen/sp_16"
                            app:font="@{`regular`}" />

                        <TextView
                            android:id="@+id/tv_categoryName"
                            style="@style/editTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/full_transparent"
                            android:ellipsize="marquee"
                            android:gravity="center_vertical"
                            android:hint="@string/app_name"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/dp_4"
                            android:singleLine="true"
                            android:text="@string/n_a"
                            android:textColor="@color/grey_stroke"
                            android:textColorHint="@color/black_text"
                            android:textSize="@dimen/sp_16"
                            app:font="@{`regular`}" />

                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical">

                        <TextView

                            android:id="@+id/tv_t3"
                            style="@style/editTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/full_transparent"
                            android:ellipsize="marquee"
                            android:gravity="center_vertical"
                            android:hint="@string/app_name"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/dp_4"
                            android:singleLine="true"
                            android:text="@string/mrp_and_discount"
                            android:textColor="@color/colorPrimaryDark"
                            android:textColorHint="@color/black_text"
                            android:textSize="@dimen/sp_16"
                            app:font="@{`regular`}" />

                        <TextView
                            android:id="@+id/tv_priceBuy"
                            style="@style/editTextStyle"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:background="@color/full_transparent"
                            android:ellipsize="marquee"
                            android:gravity="center_vertical"
                            android:hint="@string/app_name"
                            android:marqueeRepeatLimit="marquee_forever"
                            android:padding="@dimen/dp_4"
                            android:singleLine="true"
                            android:text="@string/n_a"
                            android:textColor="@color/dark_role"
                            android:textColorHint="@color/black_text"
                            android:textSize="@dimen/sp_16"
                            app:font="@{`regular`}" />

                    </LinearLayout>



                </LinearLayout>


            </RelativeLayout>



        </RelativeLayout>

    </ScrollView>
</layout>